# real_time_object_detection

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  detect.hpp  main.cpp  nginx.conf  receiver.cpp
src/: Decoder.cpp  Decoder.h  Decoder.hpp  H264SwDecApi.c  Loader.hpp  Queue.hpp  Receiver.cpp  Receiver.hpp  Streamer.cpp  Streamer.hpp  detect.hpp  extraFlags.c  h264bsd_byte_stream.h  h264bsd_cavlc.h  h264bsd_cfg.h  h264bsd_conceal.h  h264bsd_deblocking.c  h264bsd_decoder.h  h264bsd_dpb.h  h264bsd_image.h  h264bsd_inter_prediction.h  h264bsd_intra_prediction.h  h264bsd_macroblock_layer.h  h264bsd_nal_unit.h  h264bsd_neighbour.h  h264bsd_pic_order_cnt.h  h264bsd_pic_param_set.h  h264bsd_reconstruct.h  h264bsd_sei.h  h264bsd_seq_param_set.h  h264bsd_slice_data.h  h264bsd_slice_group_map.h  h264bsd_slice_header.h  h264bsd_storage.h  h264bsd_stream.h  h264bsd_transform.h  h264bsd_util.h  h264bsd_vlc.h  h264bsd_vui.h  h264decoder.cpp  (+4 more)
